letest update for admin side and some message update regarding email services